Added google tag

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta property="og:image" content="/logo.svg" />
     <meta property="og:url" content="https://proservicegrowth.com/" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QK4DHGBT8P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QK4DHGBT8P');
+    </script>
     <title>Pro Service Growth</title>
   </head>
   <body>
